# facenet

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
facenet/: __init__.py  dataset.py  features.py  plots.py
facenet/modeling/: predict.py  train.py
